[gd_scene load_steps=20 format=3 uid="uid://botod5i770as7"]

[ext_resource type="Script" path="res://Scripts/GridPlayer.gd" id="1_k1buu"]
[ext_resource type="Texture2D" uid="uid://b2irlmioj7bg3" path="res://Sprites/Chase/player_run.png" id="2_ic840"]
[ext_resource type="FontFile" uid="uid://cotqlt6yhixp1" path="res://DialogueReal/Other/Minecraft.ttf" id="3_nhp3f"]
[ext_resource type="Texture2D" uid="uid://dcyk8bbm4r0e0" path="res://Sprites/UI/vision blocker.png" id="3_tda5f"]
[ext_resource type="Texture2D" uid="uid://c3o7fqi4v2eta" path="res://Sprites/UI/blood splatter.png" id="4_68rwe"]
[ext_resource type="Texture2D" uid="uid://be6mg57q8q25s" path="res://Sprites/UI/scaled_key.png" id="4_p2smy"]
[ext_resource type="Texture2D" uid="uid://bumixsxmugenu" path="res://spotlight border.png" id="4_q5yl7"]
[ext_resource type="Texture2D" uid="uid://bc01pv1a61w5m" path="res://Arrow.png" id="5_xrwpc"]
[ext_resource type="Script" path="res://ObjectScenes/KeyArrow.gd" id="6_5jy7p"]
[ext_resource type="Script" path="res://ObjectScenes/key1.gd" id="10_au1og"]
[ext_resource type="Script" path="res://ObjectScenes/key2.gd" id="11_2lvdl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_734vd"]
size = Vector2(15.3846, 11.5385)

[sub_resource type="Animation" id="Animation_axq2i"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_j47fr"]
resource_name = "WalkDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_gxd3b"]
resource_name = "WalkLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_8ft1t"]
resource_name = "WalkRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_eqjrh"]
resource_name = "WalkUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dv04f"]
_data = {
"Idle": SubResource("Animation_axq2i"),
"WalkDown": SubResource("Animation_j47fr"),
"WalkLeft": SubResource("Animation_gxd3b"),
"WalkRight": SubResource("Animation_8ft1t"),
"WalkUp": SubResource("Animation_eqjrh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5etaa"]

[node name="GridPlayer" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_k1buu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.75001)
scale = Vector2(0.65, 0.65)
shape = SubResource("RectangleShape2D_734vd")
debug_color = Color(0.882353, 0, 0.819608, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_ic840")
hframes = 4
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dv04f")
}

[node name="InteractionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
scale = Vector2(1.6, 1.7)
shape = SubResource("RectangleShape2D_5etaa")

[node name="Label" type="RichTextLabel" parent="."]
z_index = 2
offset_left = -101.0
offset_top = -31.0
offset_right = 96.0
offset_bottom = -5.0
theme_override_fonts/normal_font = ExtResource("3_nhp3f")
bbcode_enabled = true
text = "[center]When the amongus is sus[/center]"
fit_content = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3.6)
limit_left = 0
limit_top = 0
limit_right = 643
limit_bottom = 386
limit_smoothed = true

[node name="key1" type="Sprite2D" parent="Camera2D"]
z_index = 2
position = Vector2(75, -50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_p2smy")
script = ExtResource("10_au1og")

[node name="key2" type="Sprite2D" parent="Camera2D"]
z_index = 2
position = Vector2(50, -50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_p2smy")
script = ExtResource("11_2lvdl")

[node name="VisionBlocker" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(1.2, 1)
texture = ExtResource("3_tda5f")

[node name="SpotlightBorder" type="Sprite2D" parent="VisionBlocker"]
position = Vector2(0, 1.5)
scale = Vector2(0.362226, 0.358059)
texture = ExtResource("4_q5yl7")

[node name="BloodSplatter" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(1.2, 1)
texture = ExtResource("4_68rwe")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_xrwpc")
script = ExtResource("6_5jy7p")

[connection signal="body_entered" from="InteractionRange" to="." method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="InteractionRange" to="." method="_on_interaction_range_body_exited"]
